--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="colorPrimary">#455a64</color>
+    <color name="colorPrimaryLight">#80455A64</color>
+    <color name="colorPrimaryDark">#3B4D55</color>
+    <color name="colorAccent">#4066ff</color>
 </resources>
