--- a/workshop-lesson-three/src/main/res/layout/activity_first.xml
+++ b/workshop-lesson-three/src/main/res/layout/activity_first.xml
@@ -8,10 +8,10 @@
     tools:context=".LessonThreeFirstStepActivity">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_brain_black_48dp"/>
+        android:src="@drawable/ic_brain"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
