--- a/0_app/src/main/res/layout/activity_main.xml
+++ b/0_app/src/main/res/layout/activity_main.xml
@@ -26,4 +26,14 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/lessonFirst" />
 
+    <Button
+        android:id="@+id/openThirdHomework"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/third_homework"
+        android:layout_margin="@dimen/common_16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/openSecondLesson" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
