--- a/03_homework-lesson-three/src/main/res/values/colors.xml
+++ b/03_homework-lesson-three/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="colorStoryLine">#ECECEC</color>
     <color name="color_tag">#FF3466</color>
     <color name="color_back">#6D6D80</color>
+    <color name="color_background">#191926</color>
 
     <color name="colorActorName">#D8D8D8</color>
     <color name="colorMyGray">#444444</color>
