--- a/03_homework-lesson-three/src/main/res/values/dimens.xml
+++ b/03_homework-lesson-three/src/main/res/values/dimens.xml
@@ -14,5 +14,11 @@
     <dimen name="size_24dp">24dp</dimen>
     <dimen name="size_48dp">48dp</dimen>
     <dimen name="size_56dp">56dp</dimen>
+    <dimen name="size_18dp">18dp</dimen>
+    <dimen name="size_14sp">14sp</dimen>
+    <dimen name="size_20dp">20dp</dimen>
+    <dimen name="size_40sp">40sp</dimen>
+    <dimen name="size_80dp">80dp</dimen>
 
+    <dimen name="size_3dp">3dp</dimen>
 </resources>
