--- a/03_homework-lesson-three/src/main/res/layout/fragment_movie_details.xml
+++ b/03_homework-lesson-three/src/main/res/layout/fragment_movie_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_background"
-    tools:context=".MovieDetailsActivity">
+    tools:context=".FragmentMovieDetails">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:src="@drawable/background_gradient"
-            tools:context=".MovieDetailsActivity" />
+            tools:context=".FragmentMovieDetails" />
 
 
         <TextView
