added common module for ressources

--- a/03_homework-fragment_detail_movie/src/main/res/layout/fragment_movie_details.xml
+++ b/03_homework-fragment_detail_movie/src/main/res/layout/fragment_movie_details.xml
@@ -28,12 +28,12 @@
             android:id="@+id/backButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/size_56dp"
+            android:layout_marginTop="@dimen/common_56dp"
             android:drawableLeft="@drawable/ic_path"
-            android:drawablePadding="@dimen/size_8dp"
+            android:drawablePadding="@dimen/common_8dp"
             android:text="@string/back"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/size_14sp"
+            android:textColor="@color/commonColorWhite"
+            android:textSize="@dimen/common_14sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@id/guidelineStart"
             app:layout_constraintTop_toTopOf="parent" />
@@ -43,9 +43,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="254dp"
-            android:layout_marginBottom="@dimen/size_4dp"
+            android:layout_marginBottom="@dimen/common_4dp"
             android:text="@string/name"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/commonColorWhite"
             android:textSize="@dimen/size_40sp"
             app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
             app:layout_constraintStart_toStartOf="@id/guidelineStart"
@@ -55,10 +55,10 @@
             android:id="@+id/age"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/size_8dp"
+            android:layout_marginBottom="@dimen/common_8dp"
             android:text="@string/age"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/size_12sp"
+            android:textColor="@color/commonColorWhite"
+            android:textSize="@dimen/common_12sp"
             app:layout_constraintBottom_toTopOf="@id/nameMovie"
             app:layout_constraintStart_toStartOf="@id/guidelineStart" />
 
@@ -66,10 +66,10 @@
             android:id="@+id/tag"
             android:layout_width="0dp"
             android:layout_height="@dimen/size_20dp"
-            android:layout_marginBottom="@dimen/size_4dp"
+            android:layout_marginBottom="@dimen/common_4dp"
             android:text="@string/tag"
             android:textColor="@color/color_tag"
-            android:textSize="@dimen/size_14sp"
+            android:textSize="@dimen/common_14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
             app:layout_constraintStart_toStartOf="@id/guidelineStart"
@@ -79,7 +79,7 @@
             android:id="@+id/star1"
             android:layout_width="@dimen/size_18dp"
             android:layout_height="@dimen/size_18dp"
-            android:layout_marginTop="@dimen/size_8dp"
+            android:layout_marginTop="@dimen/common_8dp"
             android:src="@drawable/ic_star"
             app:layout_constraintStart_toStartOf="@id/guidelineStart"
             app:layout_constraintTop_toBottomOf="@id/tag" />
@@ -129,9 +129,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="9dp"
-            android:layout_marginTop="@dimen/size_4dp"
+            android:layout_marginTop="@dimen/common_4dp"
             android:text="@string/_125_reviews"
-            android:textColor="@color/color_back"
+            android:textColor="@color/commonColorBack"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/star1"
@@ -143,10 +143,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:layout_marginBottom="@dimen/size_24dp"
+            android:layout_marginBottom="@dimen/common_24dp"
             android:text="@string/storyline"
             android:textColor="@color/colorStoryLine"
-            android:textSize="@dimen/size_14sp"
+            android:textSize="@dimen/common_14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
             app:layout_constraintStart_toStartOf="@id/guidelineStart"
@@ -156,10 +156,10 @@
             android:id="@+id/storyDescription"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/size_4dp"
+            android:layout_marginTop="@dimen/common_4dp"
             android:text="@string/description"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/size_12sp"
+            android:textColor="@color/commonColorWhite"
+            android:textSize="@dimen/common_12sp"
             app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
             app:layout_constraintStart_toStartOf="@id/guidelineStart"
             app:layout_constraintTop_toBottomOf="@id/storyLine" />
@@ -168,10 +168,10 @@
             android:id="@+id/titleCast"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/size_24dp"
+            android:layout_marginTop="@dimen/common_24dp"
             android:text="@string/cast"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/size_14sp"
+            android:textColor="@color/commonColorWhite"
+            android:textSize="@dimen/common_14sp"
             app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
             app:layout_constraintStart_toStartOf="@id/guidelineStart"
             app:layout_constraintTop_toBottomOf="@id/storyDescription" />
@@ -181,7 +181,7 @@
             android:layout_width="@dimen/size_80dp"
             android:layout_height="@dimen/size_80dp"
             android:layout_marginTop="@dimen/size_7dp"
-            android:layout_marginEnd="@dimen/size_8dp"
+            android:layout_marginEnd="@dimen/common_8dp"
             android:background="@drawable/ic_robert"
             android:textColor="@color/colorMyGray"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -193,10 +193,10 @@
             android:id="@+id/nameActorOne"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/size_6dp"
+            android:layout_marginTop="@dimen/common_6dp"
             android:text="@string/robert_downey_jr"
             android:textColor="@color/colorActorName"
-            android:textSize="@dimen/size_12sp"
+            android:textSize="@dimen/common_12sp"
             app:layout_constraintEnd_toEndOf="@+id/actorOneAvatar"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintLeft_toLeftOf="@id/actorOneAvatar"
@@ -208,7 +208,7 @@
             android:id="@+id/actorTwoAvatar"
             android:layout_width="@dimen/size_80dp"
             android:layout_height="@dimen/size_80dp"
-            android:layout_marginEnd="@dimen/size_8dp"
+            android:layout_marginEnd="@dimen/common_8dp"
             android:background="@drawable/ic_evans"
             android:textColor="@color/colorMyGray"
             app:layout_constraintBottom_toBottomOf="@id/actorOneAvatar"
@@ -219,10 +219,10 @@
             android:id="@+id/nameActorTwo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/size_6dp"
+            android:layout_marginTop="@dimen/common_6dp"
             android:text="@string/chris_evans"
             android:textColor="@color/colorActorName"
-            android:textSize="@dimen/size_12sp"
+            android:textSize="@dimen/common_12sp"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintLeft_toLeftOf="@id/actorTwoAvatar"
             app:layout_constraintRight_toRightOf="@id/actorTwoAvatar"
@@ -232,7 +232,7 @@
             android:id="@+id/actorThreeAvatar"
             android:layout_width="@dimen/size_80dp"
             android:layout_height="@dimen/size_80dp"
-            android:layout_marginEnd="@dimen/size_8dp"
+            android:layout_marginEnd="@dimen/common_8dp"
             android:background="@drawable/ic_ruffalo"
             app:layout_constraintBottom_toBottomOf="@id/actorOneAvatar"
             app:layout_constraintLeft_toRightOf="@+id/actorTwoAvatar"
@@ -242,10 +242,10 @@
             android:id="@+id/nameActorThree"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/size_6dp"
+            android:layout_marginTop="@dimen/common_6dp"
             android:text="@string/mark_ruffalo"
             android:textColor="@color/colorActorName"
-            android:textSize="@dimen/size_12sp"
+            android:textSize="@dimen/common_12sp"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintLeft_toLeftOf="@id/actorThreeAvatar"
             app:layout_constraintRight_toRightOf="@id/actorThreeAvatar"
@@ -255,7 +255,7 @@
             android:id="@+id/actorFourthAvatar"
             android:layout_width="@dimen/size_80dp"
             android:layout_height="@dimen/size_80dp"
-            android:layout_marginLeft="@dimen/size_8dp"
+            android:layout_marginLeft="@dimen/common_8dp"
             android:background="@drawable/ic_hemsworth"
             app:layout_constraintBottom_toBottomOf="@id/actorOneAvatar"
             app:layout_constraintLeft_toRightOf="@+id/actorThreeAvatar" />
@@ -264,11 +264,11 @@
             android:id="@+id/nameActorFour"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/size_6dp"
-            android:layout_marginBottom="@dimen/size_24dp"
+            android:layout_marginTop="@dimen/common_6dp"
+            android:layout_marginBottom="@dimen/common_24dp"
             android:text="@string/chris_hemsworth"
             android:textColor="@color/colorActorName"
-            android:textSize="@dimen/size_12sp"
+            android:textSize="@dimen/common_12sp"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintLeft_toLeftOf="@id/actorFourthAvatar"
             app:layout_constraintRight_toRightOf="@id/actorFourthAvatar"
