--- a/03_homework-fragment_detail_movie/src/main/res/values/dimens.xml
+++ b/03_homework-fragment_detail_movie/src/main/res/values/dimens.xml
@@ -3,19 +3,19 @@
 
     <dimen name="size_24sp">24sp</dimen>
     <dimen name="size_16sp">16sp</dimen>
-    <dimen name="size_12sp">12sp</dimen>
+    <dimen name="common_12sp">12sp</dimen>
 
-    <dimen name="size_4dp">4dp</dimen>
-    <dimen name="size_6dp">6dp</dimen>
+    <dimen name="common_4dp">4dp</dimen>
+    <dimen name="common_6dp">6dp</dimen>
     <dimen name="size_7dp">7dp</dimen>
-    <dimen name="size_8dp">8dp</dimen>
-    <dimen name="size_16dp">16dp</dimen>
+    <dimen name="common_8dp">8dp</dimen>
+    <dimen name="common_16dp">16dp</dimen>
     <dimen name="size_15dp">15dp</dimen>
-    <dimen name="size_24dp">24dp</dimen>
+    <dimen name="common_24dp">24dp</dimen>
     <dimen name="size_48dp">48dp</dimen>
-    <dimen name="size_56dp">56dp</dimen>
+    <dimen name="common_56dp">56dp</dimen>
     <dimen name="size_18dp">18dp</dimen>
-    <dimen name="size_14sp">14sp</dimen>
+    <dimen name="common_14sp">14sp</dimen>
     <dimen name="size_20dp">20dp</dimen>
     <dimen name="size_40sp">40sp</dimen>
     <dimen name="size_80dp">80dp</dimen>
