--- a/04_homework-fragment_movie_list/src/main/res/layout/fragment_movies_list.xml
+++ b/04_homework-fragment_movie_list/src/main/res/layout/fragment_movies_list.xml
@@ -9,13 +9,13 @@
         android:id="@+id/positionBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginStart="@dimen/common_4dp"
+        android:layout_marginTop="@dimen/common_56dp"
         android:drawableLeft="@drawable/ic_combined_shape"
-        android:drawablePadding="8dp"
+        android:drawablePadding="@dimen/common_8dp"
         android:text="Warszawa, Poland"
-        android:textColor="#FFFFFFFF"
-        android:textSize="14sp"
+        android:textColor="@color/commonColorWhite"
+        android:textSize="@dimen/common_14sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@id/guidelineStart"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,7 +24,7 @@
         android:layout_width="170dp"
         android:layout_height="296dp"
         android:layout_marginTop="27dp"
-        app:cardCornerRadius="8dp"
+        app:cardCornerRadius="@dimen/common_8dp"
         android:background="@drawable/background_card"
         app:layout_constraintStart_toStartOf="@id/guidelineStart"
         app:layout_constraintTop_toBottomOf="@id/positionBtn">
@@ -37,7 +37,7 @@
                 android:id="@+id/background"
                 android:layout_width="match_parent"
                 android:layout_height="248dp"
-                android:layout_margin="2dp"
+                android:layout_margin="@dimen/common_2dp"
                 android:src="@drawable/bacground_gradient_mask"
                 android:background="@drawable/background_movie"
                 app:layout_constraintTop_toTopOf="parent"
@@ -45,23 +45,23 @@
 
             <ImageView
                 android:id="@+id/like"
-                android:layout_width="16dp"
-                android:layout_height="14dp"
-                android:layout_marginTop="13dp"
-                android:layout_marginEnd="6dp"
+                android:layout_width="@dimen/common_16dp"
+                android:layout_height="@dimen/common_14dp"
+                android:layout_marginTop="@dimen/common_13dp"
+                android:layout_marginEnd="@dimen/common_6dp"
                 android:background="@drawable/ic_like"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
             <TextView
                 android:id="@+id/age"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginStart="6dp"
+                android:layout_width="@dimen/common_24dp"
+                android:layout_height="@dimen/common_24dp"
+                android:layout_marginTop="@dimen/common_8dp"
+                android:layout_marginStart="@dimen/common_6dp"
                 android:text="13+"
-                android:textSize="12sp"
-                android:textColor="#FFFFFF"
+                android:textSize="@dimen/common_12sp"
+                android:textColor="@color/commonColorWhite"
                 android:fontFamily="@font/roboto"
                 android:gravity="center"
                 android:background="@drawable/background_corner"
@@ -71,61 +71,61 @@
             <TextView
                 android:id="@+id/tag"
                 android:layout_width="0dp"
-                android:layout_height="12dp"
-                android:layout_marginBottom="22dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="14dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/common_22dp"
+                android:layout_marginStart="@dimen/common_8dp"
+                android:layout_marginEnd="@dimen/common_14dp"
                 android:text="Action, Adventure, Drama"
-                android:textColor="#FF3466"
-                android:textSize="8sp"
+                android:textColor="@color/color_tag"
+                android:textSize="@dimen/common_8sp"
                 app:layout_constraintBottom_toBottomOf="@id/background"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <ImageView
                 android:id="@+id/star1"
-                android:layout_width="8dp"
-                android:layout_height="8dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="10dp"
-                android:src="@drawable/ic_star"
+                android:layout_width="@dimen/common_8dp"
+                android:layout_height="@dimen/common_8dp"
+                android:layout_marginTop="@dimen/common_4dp"
+                android:layout_marginStart="@dimen/common_8dp"
+                android:layout_marginBottom="@dimen/common_10dp"
+                android:src="@drawable/ic_star_icon"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tag" />
 
             <ImageView
                 android:id="@+id/star2"
-                android:layout_width="8dp"
-                android:layout_height="8dp"
-                android:layout_marginStart="2dp"
-                android:src="@drawable/ic_star"
+                android:layout_width="@dimen/common_8dp"
+                android:layout_height="@dimen/common_8dp"
+                android:layout_marginStart="@dimen/common_2dp"
+                android:src="@drawable/ic_star_icon"
                 app:layout_constraintStart_toEndOf="@id/star1"
                 app:layout_constraintTop_toTopOf="@id/star1" />
 
             <ImageView
                 android:id="@+id/star3"
-                android:layout_width="8dp"
-                android:layout_height="8dp"
-                android:layout_marginStart="2dp"
-                android:src="@drawable/ic_star"
+                android:layout_width="@dimen/common_8dp"
+                android:layout_height="@dimen/common_8dp"
+                android:layout_marginStart="@dimen/common_2dp"
+                android:src="@drawable/ic_star_icon"
                 app:layout_constraintStart_toEndOf="@id/star2"
                 app:layout_constraintTop_toTopOf="@id/star2" />
 
             <ImageView
                 android:id="@+id/star4"
-                android:layout_width="8dp"
-                android:layout_height="8dp"
-                android:layout_marginStart="2dp"
-                android:src="@drawable/ic_star"
+                android:layout_width="@dimen/common_8dp"
+                android:layout_height="@dimen/common_8dp"
+                android:layout_marginStart="@dimen/common_2dp"
+                android:src="@drawable/ic_star_icon"
                 app:layout_constraintStart_toEndOf="@id/star3"
                 app:layout_constraintTop_toTopOf="@id/star3" />
 
             <ImageView
                 android:id="@+id/star5"
-                android:layout_width="8dp"
-                android:layout_height="8dp"
-                android:layout_marginStart="2dp"
-                android:src="@drawable/ic_grey_star"
+                android:layout_width="@dimen/common_8dp"
+                android:layout_height="@dimen/common_8dp"
+                android:layout_marginStart="@dimen/common_2dp"
+                android:src="@drawable/ic_star_grey"
                 app:layout_constraintStart_toEndOf="@id/star4"
                 app:layout_constraintTop_toTopOf="@id/star4" />
 
@@ -133,11 +133,11 @@
                 android:id="@+id/counter"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="2dp"
+                android:layout_marginStart="@dimen/common_6dp"
+                android:layout_marginTop="@dimen/common_2dp"
                 android:text="125 reviews"
-                android:textColor="#6D6D80"
-                android:textSize="8sp"
+                android:textColor="@color/commonColorBack"
+                android:textSize="@dimen/common_8sp"
                 android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/tag"
                 app:layout_constraintStart_toEndOf="@id/star5" />
@@ -147,13 +147,13 @@
                 android:id="@+id/nameMovie"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginEnd="8dp"
-                android:textColor="#FFFFFF"
+                android:layout_marginTop="@dimen/common_8dp"
+                android:layout_marginLeft="@dimen/common_8dp"
+                android:layout_marginEnd="@dimen/common_8dp"
+                android:textColor="@color/commonColorWhite"
                 android:fontFamily="@font/roboto"
                 android:text="Avengers: End Game"
-                android:textSize="14sp"
+                android:textSize="@dimen/common_14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/background" />
@@ -162,13 +162,13 @@
                 android:id="@+id/timing"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:textColor="#565665"
+                android:layout_marginLeft="@dimen/common_8dp"
+                android:layout_marginEnd="@dimen/common_8dp"
+                android:layout_marginBottom="@dimen/common_8dp"
+                android:textColor="@color/color_time"
                 android:fontFamily="@font/roboto"
                 android:text="137 MIN"
-                android:textSize="8sp"
+                android:textSize="@dimen/common_8sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/nameMovie" />
