--- a/0_common/src/main/res/values/colors.xml
+++ b/0_common/src/main/res/values/colors.xml
@@ -6,6 +6,9 @@
     <color name="color_red">#FF2344</color>
 
     <color name="colorBackgroundContainer">@color/colorMoonYellow</color>
+<!--common-->
+    <color name="commonColorWhite">#FFFFFFFF</color>
+    <color name="commonColorBack">#6D6D80</color>
 
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
@@ -15,11 +18,10 @@
 
     <color name="colorTransparent">#FFFFFFFF</color>
     <color name="colorBlack">#FF000000</color>
-    <color name="commonColorWhite">#FFFFFFFF</color>
     <color name="colorStoryLine">#ECECEC</color>
     <color name="color_tag">#FF3466</color>
-    <color name="commonColorBack">#6D6D80</color>
     <color name="color_background">#191926</color>
+    <color name="color_time">#565665</color>
 
     <color name="colorActorName">#D8D8D8</color>
     <color name="colorMyGray">#444444</color>
