--- a/0_common/src/main/res/values/dimens.xml
+++ b/0_common/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <!--common dp-->
     <dimen name="common_2dp">2dp</dimen>
+    <dimen name="common_3dp">3dp</dimen>
     <dimen name="common_4dp">4dp</dimen>
     <dimen name="common_6dp">6dp</dimen>
     <dimen name="common_8dp">8dp</dimen>
@@ -10,6 +11,7 @@
     <dimen name="common_13dp">13dp</dimen>
     <dimen name="common_14dp">14dp</dimen>
     <dimen name="common_16dp">16dp</dimen>
+    <dimen name="common_18dp">18dp</dimen>
     <dimen name="common_22dp">22dp</dimen>
     <dimen name="common_24dp">24dp</dimen>
     <dimen name="common_56dp">56dp</dimen>
@@ -30,5 +32,4 @@
     <dimen name="common_12sp">12sp</dimen>
     <dimen name="common_14sp">14sp</dimen>
 
-    <dimen name="size_3dp">3dp</dimen>
 </resources>
