--- a/04_homework-fragment_movie_list/src/main/res/layout/fragment_movies_list.xml
+++ b/04_homework-fragment_movie_list/src/main/res/layout/fragment_movies_list.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingStart="@dimen/common_12dp"
     android:background="#191926">
 
     <TextView
@@ -21,6 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/movieItem"
         android:layout_width="170dp"
         android:layout_height="296dp"
         android:layout_marginTop="27dp"
