--- a/04_homework-fragment_movie_list/src/main/res/layout/fragment_movies_list.xml
+++ b/04_homework-fragment_movie_list/src/main/res/layout/fragment_movies_list.xml
@@ -31,14 +31,14 @@
             android:layout_width="170dp"
             android:layout_height="296dp"
             android:layout_marginTop="27dp"
-            android:background="@drawable/background_card"
             app:cardCornerRadius="@dimen/common_8dp"
             app:layout_constraintStart_toStartOf="@id/guidelineStart"
             app:layout_constraintTop_toBottomOf="@id/positionBtn">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@drawable/background_card">
 
                 <ImageView
                     android:id="@+id/background"
